added basic structure to html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         <h1>Plan Your Trip!</h1> 
     </header>
     <main>
+        <div class = "container">Container
+            <h2 class = "box">box</h2>
+            <nav>Navigation bar</nav>
+            <button class = "saveButton"><i class = "saveStorage"></i>Button</button>
+            <textarea class = "input-field">Text Area</textarea>
+        </div>
+
+        <div class = "container-2">
+            <h2 class = "box">box</h2>
+            <nav>Navigation Bar</nav>
+            <button class = "saveButton"><i class = "saveStorage"></i>Button</button>
+            <textarea class = "input-field">Text Area</textarea>
+        </div>
 
     </main>
     <script src = "./script.js"></script>
