added input fields in html

--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
         <h1>Plan Your Trip!</h1> 
     </header>
     <main>
-        <div class = "container">Container
-            <h2 class = "box">box</h2>
-            <nav>Navigation bar</nav>
-            <button class = "saveButton"><i class = "saveStorage"></i>Button</button>
-            <textarea class = "input-field">Text Area</textarea>
+        <div class = "container">
+            <form> 
+                <label for="destination-field"</label><b>Search for Airport :</b></label>
+                <input type="text" id = "destination-field" placeholder="Enter the destination"></textarea><br/>
+                <button type="submit" value="submit"><i class = "saveStorage"></i>Search</button><br/>
+    </form>
+           
         </div>
 
         <div class = "container-2">
-            <h2 class = "box">box</h2>
-            <nav>Navigation Bar</nav>
-            <button class = "saveButton"><i class = "saveStorage"></i>Button</button>
-            <textarea class = "input-field">Text Area</textarea>
+            <form> 
+                <label for="hotel-field"><b>Search for Hotel :</b></label>          
+                  <input type="text" id="hotel-field" placeholder="search for hotel"></textarea><br/>
+            <button type= "submit" value="submit"><i class = "saveStorage"></i>Search</button>
+            </form>
+
         </div>
 
     </main>
