added fetch in js for airports

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </header>
     <main>
         <div class = "container">
-            <form> 
+            <form id="search-airport"> 
                 <label for="destination-field"</label><b>Search for Airport :</b></label>
                 <input type="text" id = "destination-field" placeholder="Enter the destination"></textarea><br/>
-                <button type="submit" value="submit"><i class = "saveStorage"></i>Search</button><br/>
+                <button type="submit" value="submit">Search Airport</button><br/>
     </form>
            
         </div>
@@ -28,7 +28,7 @@
             <form> 
                 <label for="hotel-field"><b>Search for Hotel :</b></label>          
                   <input type="text" id="hotel-field" placeholder="search for hotel"></textarea><br/>
-            <button type= "submit" value="submit"><i class = "saveStorage"></i>Search</button>
+            <button type= "submit" value="submit">Search Hotel</button>
             </form>
 
         </div>
