fetches nearby airports from airport api

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </div>
 
     <main>
-        <div class="airport-container">
-            <form>
+        <div >
+            <form class="airport-container">
                 <label for="destination-field"><b>Search for Airport :</b></label>
                 <input type="text" id="destination-field" placeholder="Enter the destination"></textarea><br />
-                <button type="submit" value="submit"><i class="saveStorage"></i>Search</button><br />
+                <button id="Search-airport"type="submit" value="submit">Search</button><br />
             </form>
         </div>
 
