fixed a missing quote in html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </form>
     </div>
 
-        <div id = "hotel-container>
+        <div id = "hotel-container">
           <form class = "hotel-container">
             <h3>Enter a City Name</h3>
             <input class="input city-input" id="destination-field" type="text" placeholder="Search Nearby Hotels">
