--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trip Planner</title>
-    <script src="https://code.jquery.com/jquery-3.7.1.js" 
-    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" 
-    crossorigin="anonymous">
-    </script>
-    <link rel="stylesheet" href="./style.css"/>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./reset.css" />     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
-    <h1>Plan Your Trip!</h1>
-    <div class = "container">
-      <div class = "input-field">
-        <h3>Enter a City Name</h3>
-        <input class="city-input" type="text" placeholder="Search Nearby Airports">
-        <button class="search-btn">Search</button>
-        </div>
 
-        <div class="separator"></div>
-
-        <div>
-        <h3>Enter a City Name</h3>
-        <input class="city-input" type="text" placeholder="Search Nearby Hotels">
-        <button class="search-btn">Search</button>
+      <div id="hero-image">
+        <div id="hero-text">
+            <h1>Plan Your Trip</h1>
         </div>
+     </div>
+
+    <div id = "airport-container">
+      <form class = "airport-container">
+        <h3>Enter a City Name</h3>
+        <input class="input city-input" type="text" placeholder="Search Nearby Airports">
+        <button class="search-btn button is-responsive is-light">Search</button>
+      </form>
     </div>
 
-    <button class="location-btn">Use Current Location</button>
-
+        <div id = "hotel-container">
+          <form class = "hotel-container">
+            <h3>Enter a City Name</h3>
+            <input class="input city-input" id="destination-field" type="text" placeholder="Search Nearby Hotels">
+            <button class="search-btn button is-responsive is-light">Search</button>
+          </form>
+        </div>
+        <!--
     <div class="results">
         <h2>Airport Results</h2>
         <ul class="air-results">
@@ -55,7 +58,7 @@
             </li>
         </ul>
     </div>
-
+        -->
     <script src="./script.js"></script>
 </body>
 
