--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trip Planner</title>
-
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous">
-        </script>
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./reset.css" />     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 </head>
 
 <body>
@@ -43,11 +41,13 @@
             <div id="airport-container">
                 <form class="airport-container">
                     <h3>Search Nearby Airports</h3>
-                    <input class="input city-input" id="destination-airport" type="text"
-                        placeholder="Enter a city name">
+                    <input class="input city-input" id="destination-airport" type="text"placeholder="Enter a city name">
                     <button class="search-btn button is-responsive is-light">Search</button>
                 </form>
             </div>
+
+            <label for="from">Arrival Date:</label><input type="text" id="from" name="from">
+            <label for="to">Departure Date:</label><input type="text" id="to" name="to">
 
             <div id="hotel-container">
                 <form class="hotel-container">
@@ -57,7 +57,6 @@
                 </form>
             </div>
         </div>
-
     </div>
 
 
