modeified js to search hotel

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="airport-container">
         <form class="airport-container">
             <h3>Search Nearby Airports</h3>
-            <input class="input city-input" id="destination-field" type="text" placeholder="Enter a city name">
+            <input class="input city-input" id="destination-airport" type="text" placeholder="Enter a city name">
             <button class="search-btn button is-responsive is-light">Search</button>
         </form>
     </div>
@@ -33,7 +33,7 @@
     <div id="hotel-container">
         <form class="hotel-container">
             <h3>Search Nearby Hotels</h3>
-            <input class="input city-input" id="destination-field" type="text" placeholder="Enter a city name">
+            <input class="input city-input" id="destination-hotel" type="text" placeholder="Enter a city name">
             <button class="search-btn button is-responsive is-light">Search</button>
         </form>
     </div>
