--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trip Planner</title>
     <link rel="stylesheet" href="./reset.css" />     
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -46,14 +47,17 @@
                 </form>
             </div>
 
-            <label for="from">Arrival Date:</label><input type="text" id="from" name="from">
-            <label for="to">Departure Date:</label><input type="text" id="to" name="to">
-
             <div id="hotel-container">
                 <form class="hotel-container">
                     <h3>Search Nearby Hotels</h3>
-                    <input class="input city-input" id="destination-hotel" type="text" placeholder="Enter a city name">
-                    <button class="search-btn button is-responsive is-light">Search</button>
+                    <div>
+                        <input class="input city-input" id="destination-hotel" type="text" placeholder="Enter a city name">
+                    </div>
+                    <div>    
+                        <label for="from">Arrival Date: </label><input class ="input" type="text" id="from" name="from">
+                        <label for="to">Departure Date: </label><input class="input" type="text" id="to" name="to">
+                    </div>  
+                        <button class="search-btn button is-responsive is-light">Search</button> 
                 </form>
             </div>
         </div>
