--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div id="hero-text">
             <h1>Plan Your Trip</h1>
         </div>
+    </div>    
       
     <div id="input-boxes">
         <div id="checklist-container">
