--- a/index.html
+++ b/index.html
@@ -1,44 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trip Planner</title>
-
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous">
-        </script>
     <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
     <link rel="stylesheet" href="./style.css" />
-</head>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+  </head>
 
-<body>
+  <body>
+    <div id="hero-image">
+      <div id="hero-text">
+        <h1>Plan Your Trip</h1>
+      </div>
+    </div>
 
-      <div id="hero-image">
-        <div id="hero-text">
-            <h1>Plan Your Trip</h1>
+    <div id="input-boxes">
+      <div id="checklist-container">
+        <div id="add-item" class="box">
+          <h2><b>Travel Checklist:</b></h2>
+          <input
+            class="input"
+            type="text"
+            id="checklist-input"
+            placeholder="add task"
+          />
+          <span
+            onclick="newElement()"
+            class="addBtn button is-responsive is-light"
+            >Add</span
+          >
         </div>
-     </div>
 
-    <div id="airport-container">
-        <form class="airport-container">
+        <ul id="checklist-items" class="box">
+          <li>
+            <label class="checkbox"
+              ><input type="checkbox" /> Book flight</label
+            >
+          </li>
+          <li>
+            <label class="checkbox"><input type="checkbox" /> Book hotel</label>
+          </li>
+          <li>
+            <label class="checkbox"><input type="checkbox" /> Rent car</label>
+          </li>
+          <li>
+            <label class="checkbox"
+              ><input type="checkbox" /> Pack suitcase</label
+            >
+          </li>
+          <li>
+            <label class="checkbox"
+              ><input type="checkbox" /> Check in for flight</label
+            >
+          </li>
+        </ul>
+      </div>
+
+      <div id="search-boxes">
+        <div id="airport-container">
+          <form class="airport-container">
             <h3>Search Nearby Airports</h3>
-            <input class="input city-input" id="destination-airport" type="text" placeholder="Enter a city name">
-            <button class="search-btn button is-responsive is-light">Search</button>
-        </form>
+            <input
+              class="input city-input"
+              id="destination-airport"
+              type="text"
+              placeholder="Enter a city name"
+            />
+            <button class="search-btn button is-responsive is-light">
+              Search
+            </button>
+          </form>
+        </div>
+
+        <div id="hotel-container">
+          <form class="hotel-container">
+            <h3>Search Nearby Hotels</h3>
+            <div>
+              <input
+                class="input city-input"
+                id="destination-hotel"
+                type="text"
+                placeholder="Enter a city name"
+              />
+            </div>
+            <div>
+              <label for="from">Arrival Date: </label
+              ><input class="input" type="text" id="from" name="from" />
+              <label for="to">Departure Date: </label
+              ><input class="input" type="text" id="to" name="to" />
+            </div>
+            <button class="search-btn button is-responsive is-light">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
 
-    <div id="hotel-container">
-        <form class="hotel-container">
-            <h3>Search Nearby Hotels</h3>
-            <input class="input city-input" id="destination-hotel" type="text" placeholder="Enter a city name">
-            <button class="search-btn button is-responsive is-light">Search</button>
-        </form>
-    </div>
-  
-<!--
+    <!--
     <div class="results box">
 
         <h2>Airport Results</h2>
@@ -65,6 +135,5 @@
     </div>
 -->
     <script src="./script.js"></script>
-</body>
-
+  </body>
 </html>
