--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="add-item" class="box">
                 <h2><b>Travel Checklist:</b></h2>
                 <input class="input" type="text" id="checklist-input" placeholder="add task">
-                <span onclick="newElement()" class="addBtn button is-responsive is-light">Add</span>
+                <span onclick="newElement()" class="addBtn button is-responsive is-primary">Add</span>
             </div>
 
             <ul id="checklist-items" class="box">
@@ -40,8 +40,8 @@
                 <li><label class="checkbox"><input type="checkbox"> Rent car</label></li>
                 <li><label class="checkbox"><input type="checkbox"> Pack suitcase</label></li>
                 <li><label class="checkbox"><input type="checkbox"> Check in for flight</label></li>
+                <button class="clear-btn button is-responsive is-primary">Clear List</button>
             </ul>
-            <button class="clear-btn button is-responsive is-light">Clear List</button>
         </section>
 
         <section id="search-boxes">
@@ -57,7 +57,6 @@
             <div class="airport-results box">
                 <h2><b>Airport Results: </b></h2>
                 <ul id="airport-results">
-                    <li> test </li>
                 </ul>
             </div>
 
@@ -77,9 +76,8 @@
             </div>
 
             <div class="hotel-results box">
-                <h2><b>Hotel Results</b></h2>
-                <ul class="hotel-results">
-                    <li> test </li>
+                <h2><b>Hotel Results: </b></h2>
+                <ul id="hotel-results">
                 </ul>
             </div>
         </section>
