stages files to switch branches

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trip Planner</title>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="./reset.css" />     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./style.css" />
@@ -59,34 +60,6 @@
         </div>
     </div>
 
-
-
-    <!--
-    <div class="results box">
-
-        <h2>Airport Results</h2>
-        <ul class="air-results">
-            <li class="card">
-                <h3>(11-13-2023)</h3>
-                <img src="placeholder" alt="airport-pic">
-                <h4>Location:</h4>
-                <h4>Address:</h4>
-            </li>
-        </ul>
-    </div>
-
-    <div class="results box">
-        <h2>Hotel Results</h2>
-        <ul class="hotel-results">
-            <li class="card">
-                <h3>(11-13-2023)</h3>
-                <img src="placeholder" alt="hotel-pic">
-                <h4>Location:</h4>
-                <h4>Address:</h4>
-            </li>
-        </ul>
-    </div>
--->
     <script src="./script.js"></script>
 </body>
 
