--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
                 <ul id="checklist" class="box">
                     <li><label class="checkbox"><input type="checkbox"> Book flight</label></li>
                     <li><label class="checkbox"><input type="checkbox"> Book hotel</label></li>
-                    <li><label class="checkbox"><input type="checkbox"> Rent car</label></li>
-                    <li><label class="checkbox"><input type="checkbox"> Pack suitcase</label></li>
-                    <li><label class="checkbox"><input type="checkbox"> Check in for flight</label></li>
                 </ul>
                 <button class="clear-btn button is-responsive is-primary">Clear List</button>
             </div>    
@@ -56,7 +53,7 @@
                 </form>
             </div>
 
-            <div class="airport-results box">
+            <div id="airport-results-container" class="airport-results box hide">
                 <h2><b>Airport Results: </b></h2>
                 <ul id="airport-results">
                 </ul>
@@ -77,7 +74,7 @@
                 </form>
             </div>
 
-            <div class="hotel-results box">
+            <div id="hotel-results-container" class="hotel-results box hide">
                 <h2><b>Hotel Results: </b></h2>
                 <ul id="hotel-results">
                 </ul>
