display modal message if no hotels for the entered city

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="modal">
       <div class="modal-background"></div>
       <div class="modal-content has-background-white modal-box">
-        <p><b>No Airports for the entered city! </b></p>
+        <p id="Modal-Message"><b></b></p>
       </div>
     </div>
     <main id="input-boxes">
