display results in ordered list

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div id="airport-results-container" class="airport-results box hide">
           <h2><b>Airport Results: </b></h2>
-          <ul id="airport-results"></ul>
+          <ol id="airport-results"></ol>
         </div>
 
         <div id="hotel-container">
@@ -114,7 +114,7 @@
 
         <div id="hotel-results-container" class="hotel-results box hide">
           <h2><b>Hotel Results: </b></h2>
-          <ul id="hotel-results"></ul>
+          <ol id="hotel-results"></ol>
         </div>
       </section>
     </main>
