--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 ><input type="checkbox" /> Book hotel</label>
             </li>
           </ul>
-          <button class="clear-btn button is-responsive is-primary">
+          <button class="clear-btn button is-responsive is-primary" id="clear-button">
             Clear List
           </button>
         </div>
