attempt to resolve conflicts with updated code

--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
     <div class="modal">
       <div class="modal-background"></div>
       <div class="modal-content has-background-white modal-box">
-        <p><b>No Airports for the entered city! </b></p>
+        <p id="Modal-Message"><b> </b></p>
       </div>
     </div>
 
     <main id="input-boxes">
-      
       <section id="checklist-container">
         <div id="add-item" class="box">
           <h2><b>Travel Checklist:</b></h2>
@@ -45,9 +44,9 @@
             id="checklist-input"
             placeholder="add task"
           />
-          
+
           <span
-            onclick="renderChecklist()" 
+            onclick="renderChecklist()"
             onclick="saveLocalTask()"
             class="addBtn button is-responsive is-primary"
             >Add
@@ -58,14 +57,19 @@
           <ul id="checklist" class="box">
             <li>
               <label class="checkbox">
-                <input type="checkbox"/> Book flight</label>
+                <input id="userInput" type="checkbox" /> Book flight</label>
             </li>
             <li>
               <label class="checkbox">
-                <input type="checkbox" /> Book hotel</label>
+                <input id="userInput" type="checkbox" /> Book hotel</label>
             </li>
           </ul>
-          <button id="clear-button" class="clear-btn button is-responsive is-primary">
+          <button id="userInput" class="clear-btn button is-responsive is-primary" onclick="saveValue()">Save</button>
+
+          <button
+            id="clear-button"
+            class="clear-btn button is-responsive is-primary"
+          >
             Clear List
           </button>
         </div>
@@ -120,11 +124,9 @@
             </button>
           </form>
         </div>
-
       </section>
     </main>
 
     <script src="./script.js"></script>
   </body>
-
 </html>
