--- a/index.html
+++ b/index.html
@@ -25,74 +25,45 @@
         <p class="subtitle">Search for flights and hotels</p>
       </div>
     </section>
-<<<<<<< HEAD
-=======
 
->>>>>>> 398df89a21c4fe069b5710e19b2d86bb80427252
     <!--Modal to diaplay messages-->
     <div class="modal">
       <div class="modal-background"></div>
       <div class="modal-content has-background-white modal-box">
-<<<<<<< HEAD
         <p><b>No Airports for the entered city! </b></p>
       </div>
     </div>
-=======
-        <p id="Modal-Message"><b></b></p>
-      </div>
-    </div>
 
->>>>>>> 398df89a21c4fe069b5710e19b2d86bb80427252
     <main id="input-boxes">
+      
       <section id="checklist-container">
         <div id="add-item" class="box">
           <h2><b>Travel Checklist:</b></h2>
-          <input
-            class="input"
-            type="text"
-            id="checklist-input"
-            placeholder="add task"
-          />
-          <span
-<<<<<<< HEAD
-            onclick="renderChecklist()" 
-            onclick="saveLocalTask()"
-            class="addBtn button is-responsive is-primary"
-            >Add</span>
-=======
-            onclick="renderChecklist()"
-            class="addBtn button is-responsive is-primary"
-          >
+          <form>
+            <input
+              class="input"
+              type="text"
+              id="checklist-input"
+              placeholder="add task"
+              />
+          </form>
+          <button id="add-button" class="button is-responsive is-primary">
             Add
-          </span>
->>>>>>> 398df89a21c4fe069b5710e19b2d86bb80427252
+          </button>
         </div>
 
         <div>
           <ul id="checklist" class="box">
             <li>
-              <label class="checkbox"
-<<<<<<< HEAD
-                ><input type="checkbox" /> Book flight</label
-              >
+              <label class="checkbox">
+                <input type="checkbox"/> Book flight</label>
             </li>
             <li>
-              <label class="checkbox"
-                ><input type="checkbox" /> Book hotel</label
-              >
+              <label class="checkbox">
+                <input type="checkbox" /> Book hotel</label>
             </li>
           </ul>
-          <button id="clear-button" class="clear-btn button is-responsive is-primary">
-=======
-                ><input type="checkbox" /> Book flight</label>
-            </li>
-            <li>
-              <label class="checkbox"
-                ><input type="checkbox" /> Book hotel</label>
-            </li>
-          </ul>
-          <button class="clear-btn button is-responsive is-primary">
->>>>>>> 398df89a21c4fe069b5710e19b2d86bb80427252
+          <button id="clear-button" class="button is-responsive is-primary">
             Clear List
           </button>
         </div>
@@ -119,14 +90,11 @@
           <ol id="airport-results"></ol>
         </div>
 
-<<<<<<< HEAD
-=======
         <div id="hotel-results-container" class="hotel-results box hide">
           <h2><b>Hotel Results: </b></h2>
           <ol id="hotel-results"></ol>
         </div>
 
->>>>>>> 398df89a21c4fe069b5710e19b2d86bb80427252
         <div id="hotel-container">
           <form class="hotel-container">
             <h3>Search Hotels</h3>
@@ -138,10 +106,7 @@
                 placeholder="Enter a city name"
               />
             </div>
-<<<<<<< HEAD
-=======
 
->>>>>>> 398df89a21c4fe069b5710e19b2d86bb80427252
             <div>
               <label for="from">Arrival Date: </label
               ><input class="input" type="text" id="from" name="from" />
@@ -153,23 +118,11 @@
             </button>
           </form>
         </div>
-<<<<<<< HEAD
 
-        <div id="hotel-results-container" class="hotel-results box hide">
-          <h2><b>Hotel Results: </b></h2>
-          <ol id="hotel-results"></ol>
-        </div>
       </section>
-=======
-      </section>
-
->>>>>>> 398df89a21c4fe069b5710e19b2d86bb80427252
     </main>
 
     <script src="./script.js"></script>
   </body>
-<<<<<<< HEAD
+
 </html>
-=======
-</html>
->>>>>>> 398df89a21c4fe069b5710e19b2d86bb80427252
